# lau-dirichlet-space

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: belief_dynamics.rs  cole_hopf.rs  core.rs  dequantization.rs  dirichlet_form.rs  heat_semigroup.rs  hopf_lax.rs  jko.rs  laplacian.rs  lib.rs  registers.rs  spectral.rs  wasserstein.rs
tests/: integration_tests.rs
