[package]
name = "lau-dirichlet-space"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-dirichlet-space"
description = "Dequantizable Dirichlet Space — the unified mathematical object underlying spectral theory, ergodic dynamics, information geometry, and tropical limits"

[dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
approx = "0.5"
